Fixes scrollbars, font sizing based on new defaults, makes analysis sidepanel overlay instead of resize, css fixes

--- a/client/src/app/components/settings-sidebar/settings-sidebar.component.scss
+++ b/client/src/app/components/settings-sidebar/settings-sidebar.component.scss
@@ -82,6 +82,7 @@
     border-bottom-right-radius: 8px;
     // position: fixed;
     overflow: scroll;
+    overflow-x: hidden;
     background: var(--gray-90, #222829);
 
     section {
